# Toaster

./: Cargo.toml  LICENSE  README.md  toaster.toml
src/: args.rs  main.rs  settings.rs  tomlp.rs
src/args/: mod.rs
src/lib/: color.rs  command_builder.rs  command_stage.rs  lib.rs  settings.rs  system_builder.rs  system_stage.rs  tomlp.rs
src/toaster/: command_builder.rs  command_stage.rs  mod.rs  system_builder.rs  system_stage.rs
